package com.android.sample.ui.navigation

object NavigationTestTags {
  const val GO_BACK_BUTTON = "GoBackButton"
  const val TOP_BAR_TITLE = "TopBarTitle"
  const val OVERVIEW_TAB = "OverviewTab"
  const val MAP_TAB = "MapTab"
}
